--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
 Things to do :
-- Merge this sh*t
+(Done :D)Merge this sh*t
+- Finish heightmap collision detection
 - Make everything work again :(
-- Fix the f*cking culling
-- Add heightmap collision detection
+(Done :D)Fix the f*cking culling
 - Improve the octree?
 - Fix the tree growing, you know, when it vibrates by some reason.
 - Fix the springs
